2007-06-02  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-user.scm
	  Replace function names kahua-web-{adduser,deluser,lsuser}
	  with kahua-{adduser,deluser,lsuser}.
	  Command ls's output is now alphabetically sorted.

	* Change: src/kahua/server.scm
	  If a user is deactivated during login, he/she is immediately
	  logout.

2007-05-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* 1.0.4 released.

	* New: src/kahua-user.scm
	  New command-line user(<kahua-user> instances) management
	  tool.  This is imported from kahua-web CVS HEAD(0.3_pre10).

	* Change: src/kahua/user.scm
	  Export kahua-current-user-class.

	* Change: doc/*.ja doc/*/*.ja
	  Convert their character encoding from euc-jp to utf-8.
	  Rewrote almost half of doc/Setup.ja.

2007-05-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: emacs/kahua.el.in
	  Compatibility with Emacs 21 (that doesn't have read-directory-name).

2007-05-28  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/server.scm
	  Context didn't have "x-kahua-remote-addr".

2007-05-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/test/worker.scm
	  Lack of flush after send request to worker.

2007-05-24  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-dbutil.scm
	  Add support for -S and -c command line options.
	  It make kahua-dbutil can run in source tree (w/o install).

	* Fix: src/kahua/persistence.scm, src/kahua/persistence/dbi.scm,
	       src/kahua/persistence/mysql.scm, src/kahua/persistence/postgresql.scm
	  kahua-dbutil was broken against Kahua 0.7 or prior version
	  database on MySQL or PostgreSQL.

2007-05-18  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-server.scm
	  Unsafe implementation of kahua-write-static-file.

2007-04-27  Tatsuya BIZENN  <bizenn@arthub.net>

	* 1.0.3 released.

2007-04-26  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/elem.scm, src/kahua/server.scm
	  Fix wrong format of entity reference node(&, &:, &/).
